--- a/Bioskop/src/main/webapp/cinemaProfile.html
+++ b/Bioskop/src/main/webapp/cinemaProfile.html
@@ -171,13 +171,13 @@
 		var body = '';
 		for (var key in sortedProjections) {
 			if (sortedProjections.hasOwnProperty(key)) {
-				body += '<div class="col-md-12">';
+				body += '<div class="col-md-6">';
 				body +=	  '<div class="panel panel-primary">';
 				body +=	     '<div class="panel-heading">';
 				body +=	         '<h2 class="panel-title">' + key + '</h2>';
 				body +=      '</div>';
 				body +=      '<div class="panel-body">';
-				
+				body +=		 '<img src="images/'+ sortedProjections[key][0].movieOrPerformance.img + '" class="img img-thumbnail" style="width:100px;height:150px;">'
 				for (var i = 0; i < sortedProjections[key].length; i++) {
 					body += '<button class="btn btn-info" onclick="redirectToReservation(' + sortedProjections[key][i].id + ')">' + sortedProjections[key][i].date + '</button>'	
 				}
