front za pocetnu stranu

--- a/Bioskop/src/main/webapp/fanZone.html
+++ b/Bioskop/src/main/webapp/fanZone.html
@@ -245,15 +245,17 @@ td, th {
 		var i=new Number(1);
 
 		items.forEach(function(item){
-			if (i == 1){
-				bodyAd += '<div class="row">';
-			}
-				bodyAd += '<div class="col-md-4 item"> <div class="panel panel-success"> <div class="panel-heading"> <h3 class="panel-title">'+item.name+'</h3> </div> <div class="panel-body"> <img class="img-responsive" style="height:200px;" src=images/'+item.picture+'> <p style="margin-top:15px;word-wrap: break-word;"> '+item.description+' </p> </div> <div class="panel-footer"> <a class="btn btn-primary " onclick="makeOffer('+ item.id + ')" style="display:inline;" >Bid </a><input id="price' + item.id +'" type="text" class="form-control input-sm " placeholder="Price" style="display:inline;width:70%;margin-left:5px;margin-right:5px;" ><a class="btn btn-primary "  onclick="showOffers('+ item.id + ')" style="display:block;margin-top:5px;" >Show all offers </a> </div> </div> </div>';
-			
-			i++;
-			if (i == 4){
-				bodyAd += '</div>';
-				i = 1;
+			if (item.approved == true){
+				if (i == 1){
+					bodyAd += '<div class="row">';
+				}
+					bodyAd += '<div class="col-md-4 item"> <div class="panel panel-success"> <div class="panel-heading"> <h3 class="panel-title">'+item.name+'</h3> </div> <div class="panel-body"> <img class="img-responsive" style="height:200px;" src=images/'+item.picture+'> <p style="margin-top:15px;word-wrap: break-word;"> '+item.description+' </p> </div> <div class="panel-footer"> <a class="btn btn-primary " onclick="makeOffer('+ item.id + ')" style="display:inline;" >Bid </a><input id="price' + item.id +'" type="text" class="form-control input-sm " placeholder="Price" style="display:inline;width:70%;margin-left:5px;margin-right:5px;" ><a class="btn btn-primary "  onclick="showOffers('+ item.id + ')" style="display:block;margin-top:5px;" >Show all offers </a> </div> </div> </div>';
+				
+				i++;
+				if (i == 4){
+					bodyAd += '</div>';
+					i = 1;
+				}
 			}
 		});
 
