Brisanje brzih karata, provera korisnika, izmena projekcije...

--- a/Bioskop/src/main/webapp/profile.html
+++ b/Bioskop/src/main/webapp/profile.html
@@ -2,7 +2,7 @@
 	<div class = "row">
 		
 
-		<div class="col-md-4" style="background-color:white;border-radius:6px;padding:15px;margin-right:15px;">
+		<div class="col-md-4" style="background-color:white;border-radius:6px;padding:15px;margin-right:15px;margin-right:35px;">
 			<img id="profileImage" src="" alt="Profile picture" class="img-responsive img-circle" style="width:200px;height:200px;margin:0 auto;">
 			<h3 id="userInfo"align="center" style="margin-top:10px;">  </h3>
     		<button  id="uploadPhoto" type="button" class="btn btn-info center-block" data-toggle="modal" data-target="#photoModal" style="margin-top:20px;" >Upload photo</button>
