--- a/Bioskop/src/main/webapp/index.html
+++ b/Bioskop/src/main/webapp/index.html
@@ -47,7 +47,7 @@
                   <button  id="admin-button" type="button" class="btn btn-success admin">Administracija</button>
                   <button  id="registration-btn" type="button" class="btn btn-success">Registration</button>
                   <button  id="logout-btn" type="button" class="btn btnc-success">Log Out</button>
-                  <button  id="adminCinema-button" type="button" class="btn btn-success admin">Institution's Admin</button>
+                  <button  id="adminCinema-button" type="button" onclick="window.location.href = 'institutionAdmin.html';" class="btn btn-success admin" >Institution's Admin</button>
                   
                </form>
             </div>
@@ -145,7 +145,7 @@
 	</script>
 
 		<script>
-			
+/*			
 			$("#adminCinema-button").click(function(){
 				$("#body").empty();
 				$.get("institutionAdmin.html", function( InstitutionAdminPanel ) {
@@ -153,6 +153,7 @@
 					 
 					});
 			});
+			*/
 		</script>
 	<script src="Login.js"></script>
 
