--- a/Bioskop/src/main/webapp/sysAdmin.html
+++ b/Bioskop/src/main/webapp/sysAdmin.html
@@ -14,12 +14,13 @@
 
 <script src="dataTable.js" charset="UTF-8"></script>
 <script src="https://cdn.datatables.net/1.10.16/js/dataTables.bootstrap.min.js" charset="UTF-8"></script>
-<script src="uploadImage.js"></script>
+<script src="UploadImage.js"></script>
+<script src="Login.js"></script>
 
  
 </head>
 <body>
-      <nav class="navbar navbar-inverse navbar-fixed-top">
+     <nav class="navbar navbar-inverse navbar-fixed-top">
          <div class="container">
             <div class="navbar-header">
                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -28,7 +29,7 @@
                <span class="icon-bar"></span>
                <span class="icon-bar"></span>
                </button>
-               <a class="navbar-brand" href="index.html">Cinema</a>
+               <a class="navbar-brand" href="index.html">Home</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                <form id="login-form" class="navbar-form navbar-right">
@@ -39,10 +40,10 @@
                      <input id="password-field" type="password" placeholder="Password" class="form-control">
                   </div>
                   <button  id="login-btn" type="button" class="btn btn-success">Login</button>
-                  <button  id="admin-button" type="button" class="btn btn-success admin">Administracija</button>
+                  <button  id="profile-btn" type="button" class="btn btn-success admin">Profile</button>
                   <button  id="registration-btn" type="button" class="btn btn-success">Registration</button>
                   <button  id="logout-btn" type="button" class="btn btnc-success">Log Out</button>
-                  <button  id="adminCinema-button" type="button" class="btn btn-success admin">Institution's Admin</button>
+
                   
                </form>
             </div>
@@ -62,10 +63,7 @@
     <hr>
     <a href="#" onclick="membership()">Membership</a>
     <hr>
-  	<a href="#" onclick="itemsTab()">My Ads</a>
-	<hr>
-	<a href="#" onclick="myOffersTab()">My Offers</a>
-  	<hr>
+  	
 </div>
 
 
@@ -303,7 +301,7 @@
 	</div>
 </div> 
 </body>
-<script src="uploadImage.js"></script>
+
 <script>
 
 var tableIndex = 1;
@@ -687,7 +685,26 @@ function updateMembership(){
 	
 	
  }
+$( document ).ready(function() {
+	
+	$.ajax({
+		contentType : 'application/json',
+		dataType : 'json',
+		type : 'GET',
+		success : function(user){
+			
+			printNav(user);
+		},
+		error : function(error){
+			printNav(null);
+		},
+		processData: false,
+		url : '/api/getLoggedUser'
+	});
+    
+});
 </script>
+
 <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"> </script>
 
 
