--- a/Bioskop/src/main/webapp/RegUserProfilePanel.html
+++ b/Bioskop/src/main/webapp/RegUserProfilePanel.html
@@ -9,7 +9,73 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"> </script>
 
+<script>
+function printReservations(){
+	body = '<div class="container>"';
+	body += '<div class="row">';
+	body += '<div style="margin-left:15px;margin-right:15px;">';
+	
+	$.ajax({
+		contentType : 'application/json',
+		dataType : 'json',
+		type : 'GET',
+		processData: false,
+		url : 'api/getLoggedUser',
+		success : function(user){
+			
+			$.ajax({
+				contentType : 'application/json',
+				dataType : 'json',
+				type : 'GET',
+				success : function(tickets){
+					var i = 1;
+					var rez = 0;
+					$("#bodyRegUser").empty();
+					if(tickets.length != 0){
+						tickets.forEach(function(ticket){
+							if(ticket.user != null){
+								if(user.id == ticket.user.id){
+									rez++;
+									body  += '<div class="col-md-4"> <div class="panel panel-info"> <div class="panel-heading">' +
+									'<h3 class="panel-title"><b>'+ticket.projection.movieOrPerformance.name+'</b></h3> </div>'+ 
+									'<p style="margin-top:15px;word-wrap: break-word;">Cinema/theater: '+ticket.projection.theaterOrCinema.name+' </p>'+
+									'<p style="margin-top:15px;word-wrap: break-word;">Hall: '+ticket.projection.hall.name+' </p>'+
+									'<p style="margin-top:15px;word-wrap: break-word;">Row - Column: '+ticket.red+' - '+ticket.kolona+' </p>'+
+									'<p> <small>Old price: '+ ticket.projection.price + '</small> <big style="color:red;">New price: '+ ticket.newPrice + '</big></p>' +
+									'<p><a class="btn btn-primary " onclick="decline('+ticket.id+')" style="display:inline;"> Decline </a></p></div></div>';
+									
+									i++;
+									if (i == 4){
+										body += '</div></div>';
+										body += '<div class="row">';
+										body += '<div style="margin-left:10px;margin-right:10px;">';
+										i = 1;
+									}	
+								}
+							}
+							
+						});
+					}
+			
+					body += '</div>';
+					body += '</div>';
+					body += '</div>';
+					body += '</div>';
+			
+					$("#bodyRegUser").append(body);
+					if(rez==0){
+						var emptyBody = '<p>No reservations.</p>';
+						$("#bodyRegUser").append(emptyBody);
+					}
+				},
+				processData: false,
+				url : '/api/tickets'
+			});
+		}
+	});
+}
 
+</script>
 
 </head>
 <body>
@@ -56,7 +122,7 @@
   	<hr>
   	<a href="#" onclick="friendRequests()">Friend Requests</a>
   	<hr>
-  	<a href="#" onclick="">Reservations</a>
+  	<a href="#" onclick="printReservations()">Reservations</a>
 	<hr>
 </div>
 
@@ -144,6 +210,8 @@
 <script src="UploadImage.js"></script>
 <script>
 
+
+
 function filter() {
 	var $panels = $('.panel');
 	$('#search-input').on('keyup', function() {
@@ -156,6 +224,20 @@ function filter() {
 	});	
 }
 
+function decline(ticketId){
+	
+	$.ajax({
+		contentType : 'application/json',
+		dataType : 'json',
+		type : 'GET',
+		processData: false,
+		url : '/api/decline/' + ticketId,
+		success : function(response){
+			swal("Success!", response.msg, "success");
+			printReservations();
+		}
+	});
+}
 
 
 function filter2() {
