--- a/Bioskop/src/main/webapp/cinemas.html
+++ b/Bioskop/src/main/webapp/cinemas.html
@@ -33,9 +33,10 @@
 	            <p>We are in the Cinema View now!</p>
 	         </div>
 	      </div>
-	
+		<div class="container">
 		<div id="cinema-panels">
 				
+		</div>
 		</div>	
 	</div>
 </body>
