--- a/Bioskop/src/main/webapp/reservation.html
+++ b/Bioskop/src/main/webapp/reservation.html
@@ -66,7 +66,7 @@
             	</select>
           		</span>
           		<hr>
-          		<button class="btn btn-primary" onclick="makeReservation()">Next</button>
+          		<button class="btn btn-primary" onclick="makeReservation()">Reserve</button>
 							
 			</div>
 		</div>	
