--- a/Bioskop/src/main/webapp/index.html
+++ b/Bioskop/src/main/webapp/index.html
@@ -19,7 +19,7 @@
       <link href="css/jumbotron.css" rel="stylesheet">
       <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
       <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-		
+		<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"> </script>
    </head>
 
 <body>
@@ -70,7 +70,7 @@
 			    <!-- Wrapper for slides -->
 			    <div class="carousel-inner">
 			      <div class="item active">
-			        <img src="images/Deadpool.jpg" alt="Los Angeles" style="width:100%;height:450px;" onclick="a()">
+			        <img src="images/optimus-prime.jpg" alt="Los Angeles" style="width:100%;height:500px;" onclick="a()">
 			        <script>
 			        function a(){
 			        	alert("asd");
@@ -79,11 +79,11 @@
 			      </div>
 			
 			      <div class="item">
-			        <img src="images/starwars.jpg" alt="Chicago" style="width:100%;height:450px;">
+			        <img src="images/starwars.jpg" alt="Chicago" style="width:100%;height:500px;">
 			      </div>
 			    
 			      <div class="item">
-			        <img src="images/avengers.png" alt="New york" style="width:100%;height:450px;">
+			        <img src="images/avengers.jpg" alt="New york" style="width:100%;height:500px;">
 			      </div>
 			    </div>
 			
@@ -124,7 +124,7 @@
 	  //$("#logout-btn").hide();
 	  $('#passwordModal').modal({backdrop: 'static', keyboard: false});
 	  $( document ).ready(function() {
-		  
+		  $("body").css("overflow", "hidden");
 			$.ajax({
 				contentType : 'application/json',
 				dataType : 'json',
