--- a/Bioskop/src/main/webapp/theaters.html
+++ b/Bioskop/src/main/webapp/theaters.html
@@ -24,6 +24,7 @@
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
       <link rel="stylesheet" href="js/jquery.rateyo-lib/jquery.rateyo.css">
       <script src="Login.js"></script>
+      <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"> </script>
       
 </head>
 <body>
