--- a/Bioskop/src/main/webapp/theaterProfile.html
+++ b/Bioskop/src/main/webapp/theaterProfile.html
@@ -24,6 +24,7 @@
       <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBsiA8negpX83Hk1V46NYvuQSLe4zctKZg&callback=myMap" async defer></script>
       <link rel="stylesheet" href="js/jquery.rateyo-lib/jquery.rateyo.css">
       <script src="Login.js"></script>
+      <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"> </script>
       
       
 	
