--- a/Bioskop/src/main/webapp/index.html
+++ b/Bioskop/src/main/webapp/index.html
@@ -63,7 +63,7 @@
      
          <div class="container" >
 
-			  <h1 align="center" style="color:grey;">Promotions</h1>  
+                <a href="fastRezTickets.html" style="margin-left:30%;display:inline; font-size:36px;cursor:pointer;">Promotions</a>
 			  <div id="myCarousel" class="carousel slide" data-ride="carousel">
 			    <!-- Indicators -->
 			    <ol class="carousel-indicators">
